adapted for linux

--- a/environment.yml
+++ b/environment.yml
@@ -1,281 +1,32 @@
 name: sphinx
 channels:
-  - bioconda
-  - conda-forge
   - defaults
 dependencies:
-  - aioeasywebdav=2.4.0
-  - aiohttp=3.8.3
-  - aiosignal=1.2.0
-  - amply=0.1.5
-  - aom=3.4.0
-  - appdirs=1.4.4
-  - async-timeout=4.0.2
-  - attmap=0.13.2
-  - attrs=22.1.0
-  - backports=1.0
-  - backports.functools_lru_cache=1.6.4
-  - bcrypt=3.2.2
-  - blosc=1.21.1
-  - bokeh=2.4.3
-  - boto3=1.24.86
-  - botocore=1.27.86
-  - brotli=1.0.9
-  - brotli-bin=1.0.9
-  - brotlipy=0.7.0
-  - bzip2=1.0.8
-  - c-ares=1.18.1
-  - ca-certificates=2022.9.24
-  - cachetools=5.2.0
-  - certifi=2022.9.24
-  - cffi=1.15.1
-  - charset-normalizer=2.1.1
-  - colorama=0.4.5
-  - commonmark=0.9.1
-  - configargparse=1.5.3
-  - connection_pool=0.0.3
-  - contourpy=1.0.5
-  - cryptography=38.0.1
-  - cycler=0.11.0
-  - dataclasses=0.8
-  - datrie=0.8.2
-  - defusedxml=0.7.1
-  - dpath=2.0.6
-  - dropbox=11.34.0
-  - expat=2.4.9
-  - ffmpeg=4.4.2
-  - filechunkio=1.8
-  - filelock=3.8.0
-  - font-ttf-dejavu-sans-mono=2.37
-  - font-ttf-inconsolata=3.000
-  - font-ttf-source-code-pro=2.038
-  - font-ttf-ubuntu=0.83
-  - fontconfig=2.14.0
-  - fonts-conda-ecosystem=1
-  - fonts-conda-forge=1
-  - fonttools=4.37.4
-  - freeglut=3.2.2
-  - freetype=2.12.1
-  - frozenlist=1.3.1
-  - ftputil=5.0.4
-  - future=0.18.2
-  - gettext=0.19.8.1
-  - gitdb=4.0.9
-  - gitpython=3.1.27
-  - glib=2.74.0
-  - glib-tools=2.74.0
-  - glpk=5.0
-  - google-api-core=2.10.1
-  - google-api-python-client=2.64.0
-  - google-auth=2.12.0
-  - google-auth-httplib2=0.1.0
-  - google-cloud-core=2.3.2
-  - google-cloud-storage=2.5.0
-  - google-crc32c=1.1.2
-  - google-resumable-media=2.4.0
-  - googleapis-common-protos=1.56.4
-  - grpc-cpp=1.48.1
-  - grpcio=1.48.1
-  - gst-plugins-base=1.20.3
-  - gstreamer=1.20.3
-  - hdf5=1.12.2
-  - httplib2=0.20.4
-  - icu=70.1
-  - idna=3.4
-  - importlib-metadata=4.11.4
-  - importlib_resources=5.9.0
-  - iniconfig=1.1.1
-  - intel-openmp=2022.1.0
-  - jasper=2.0.33
-  - jinja2=3.1.2
-  - jmespath=1.0.1
-  - joblib=1.2.0
-  - jpeg=9e
-  - jsonschema=4.16.0
-  - jupyter_core=4.11.1
-  - kiwisolver=1.4.4
-  - krb5=1.19.3
-  - lcms2=2.12
-  - lerc=4.0.0
-  - libabseil=20220623.0
-  - libblas=3.9.0
-  - libbrotlicommon=1.0.9
-  - libbrotlidec=1.0.9
-  - libbrotlienc=1.0.9
-  - libcblas=3.9.0
-  - libclang=14.0.6
-  - libclang13=14.0.6
-  - libcrc32c=1.1.2
-  - libcurl=7.85.0
-  - libdeflate=1.14
-  - libffi=3.4.2
-  - libglib=2.74.0
-  - libiconv=1.17
-  - liblapack=3.9.0
-  - liblapacke=3.9.0
-  - libogg=1.3.4
-  - libopencv=4.6.0
-  - libpng=1.6.38
-  - libprotobuf=3.21.7
-  - libsqlite=3.39.4
-  - libssh2=1.10.0
-  - libtiff=4.4.0
-  - libvorbis=1.3.7
-  - libwebp-base=1.2.4
-  - libxcb=1.13
-  - libxml2=2.10.2
-  - libzlib=1.2.12
-  - logmuse=0.2.6
-  - lz4-c=1.9.3
-  - m2w64-gcc-libgfortran=5.3.0
-  - m2w64-gcc-libs=5.3.0
-  - m2w64-gcc-libs-core=5.3.0
-  - m2w64-gmp=6.1.0
-  - m2w64-libwinpthread-git=5.0.0.4634.697f757
-  - markupsafe=2.1.1
-  - matplotlib=3.6.0
-  - matplotlib-base=3.6.0
-  - mkl=2022.1.0
-  - msys2-conda-epoch=20160418
-  - multidict=6.0.2
-  - munkres=1.1.4
-  - nbformat=5.6.1
-  - numexpr=2.7.3
-  - numpy=1.23.3
-  - oauth2client=4.1.3
-  - opencv=4.6.0
-  - openh264=2.3.0
-  - openjpeg=2.5.0
-  - openssl=1.1.1q
-  - packaging=21.3
-  - pandas=1.5.0
-  - paramiko=2.11.0
-  - pcre2=10.37
-  - peppy=0.35.2
-  - pillow=9.2.0
-  - pip=22.2.2
-  - pkgutil-resolve-name=1.3.10
-  - plac=1.3.5
-  - pluggy=1.0.0
-  - ply=3.11
-  - prettytable=3.4.1
-  - protobuf=4.21.7
-  - psutil=5.9.2
-  - pthread-stubs=0.4
-  - pulp=2.6.0
-  - py=1.11.0
-  - py-opencv=4.6.0
-  - pyasn1=0.4.8
-  - pyasn1-modules=0.2.7
-  - pycparser=2.21
-  - pygments=2.13.0
-  - pynacl=1.5.0
-  - pyopenssl=22.0.0
-  - pyparsing=3.0.9
-  - pyqt=5.15.7
-  - pyqt5-sip=12.11.0
-  - pyrsistent=0.18.1
-  - pysftp=0.2.9
-  - pysocks=1.7.1
-  - pytables=3.7.0
-  - pytest=7.1.3
-  - python=3.10.6
-  - python-dateutil=2.8.2
-  - python-fastjsonschema=2.16.2
-  - python-irodsclient=1.1.5
-  - python_abi=3.10
-  - pytz=2022.4
-  - pyu2f=0.1.5
-  - pywin32=303
-  - pyyaml=6.0
-  - qt-main=5.15.6
-  - ratelimiter=1.2.0
-  - re2=2022.06.01
-  - requests=2.28.1
-  - reretry=0.11.1
-  - rich=12.6.0
-  - rsa=4.9
-  - s3transfer=0.6.0
-  - scikit-learn=1.1.2
-  - scipy=1.9.1
-  - setuptools=65.4.1
-  - setuptools-scm=7.0.5
-  - sip=6.6.2
-  - six=1.16.0
-  - slacker=0.14.0
-  - smart_open=6.2.0
-  - smmap=3.0.5
-  - snakemake=7.15.1
-  - snakemake-minimal=7.15.1
-  - snappy=1.1.9
-  - stone=3.3.1
-  - stopit=1.1.2
-  - svt-av1=1.2.1
-  - tabulate=0.8.10
-  - tbb=2021.6.0
-  - threadpoolctl=3.1.0
-  - tk=8.6.12
-  - toml=0.10.2
-  - tomli=2.0.1
-  - toposort=1.7
-  - tornado=6.2
-  - traitlets=5.4.0
-  - typing-extensions=4.3.0
-  - typing_extensions=4.3.0
-  - tzdata=2022d
-  - ubiquerg=0.6.2
-  - ucrt=10.0.20348.0
-  - unicodedata2=14.0.0
-  - uritemplate=4.1.1
-  - vc=14.2
-  - veracitools=0.1.3
-  - vs2015_runtime=14.29.30139
-  - wcwidth=0.2.5
-  - wheel=0.37.1
-  - win_inet_pton=1.1.0
-  - wrapt=1.14.1
-  - x264=1!164.3095
-  - x265=3.5
-  - xorg-libxau=1.0.9
-  - xorg-libxdmcp=1.1.3
-  - xz=5.2.6
-  - yaml=0.2.5
-  - yarl=1.7.2
-  - yte=1.5.1
-  - zipp=3.8.1
-  - zlib=1.2.12
-  - zstd=1.5.2
+  - pyyaml
+  - python[version='>=3.10']
+  - matplotlib
+  - numpy
+  - scikit-learn
+  - opencv
+  - pip
+  - pytables
+  - pandas
+  - bokeh
+  - scipy
+  - snakemake
   - pip:
-    - alabaster==0.7.12
-    - astroid==2.12.10
-    - babel==2.10.3
-    - cython==0.29.32
-    - docutils==0.17.1
-    - h5py==3.7.0
-    - imagesize==1.4.1
-    - lazy-object-proxy==1.7.1
-    - markdown-it-py==2.1.0
-    - mdit-py-plugins==0.3.1
-    - mdurl==0.1.2
-    - myst-parser==0.18.1
-    - ndindex==1.6
-    - networkx==2.8.7
-    - numpydoc==1.4.0
-    - pymou==0.2.0
-    - shapely==1.8.4
-    - sklearn==0.0
-    - snowballstemmer==2.2.0
-    - sphinx==5.2.3
-    - sphinx-autoapi==2.0.0
-    - sphinx-rtd-theme==1.0.0
-    - sphinxcontrib-applehelp==1.0.2
-    - sphinxcontrib-devhelp==1.0.2
-    - sphinxcontrib-htmlhelp==2.0.0
-    - sphinxcontrib-jsmath==1.0.1
-    - sphinxcontrib-qthelp==1.0.3
-    - sphinxcontrib-serializinghtml==1.1.5
-    - torch==1.12.1
-    - unidecode==1.3.6
-    - urllib3==1.26.12
-    - versioned-hdf5==1.3.12
+      - sphinx
+      - sphinx-autoapi
+      - torch
+      - numpydoc
+      - pyMou@git+https://github.com/mb-BCA/pyMOU.git@master
+      - networkx
+      - Shapely
+
+      - psutil
+      - wheel
+      - cython
+      - versioned-hdf5
+      - h5py
+
 prefix: C:\Users\daminkuehn\anaconda3\envs\sphinx
