--- a/environment.yml
+++ b/environment.yml
@@ -1,7 +1,8 @@
 name: sphinx
 channels:
   - defaults
-  - conda-forge 
+  - conda-forge
+  - bioconda 
 dependencies:
   - pyyaml
   - python[version='>=3.10']
